--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fast-csv": "^4.3.6",
     "moment": "^2.29.4",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
